// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«r1»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r1»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«r4»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r4»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«rf»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rf»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«ri»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«ri»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="«ru»-hint"
                aria-invalid="true"
                class="emotion-15 emotion-16"
                id="«ru»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«ru»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="«r11»-hint"
                aria-invalid="true"
                class="emotion-15 emotion-16"
                id="«r11»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r11»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«rm»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rm»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«rp»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rp»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-25 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«r8»"
                name="Checkbox."
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r8»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id="«rb»"
                name="Checkbox."
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«rb»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-10 {
  cursor: text;
}

.emotion-15 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-15 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-15[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-15[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-15[aria-disabled='true'] .emotion-20 {
  fill: #e9eaeb;
}

.emotion-15[aria-disabled='true'] .emotion-20 .emotion-22 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-invalid="true"]:checked+.emotion-20 {
  fill: #ffd3e3;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-invalid="true"]:checked+.emotion-20 .emotion-22 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-invalid="true"]+.emotion-20 {
  fill: #ffebf2;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-invalid="true"]+.emotion-20 .emotion-22 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-15[aria-disabled='true'] .emotion-18:checked+.emotion-20 {
  fill: #e5dbfd;
}

.emotion-15[aria-disabled='true'] .emotion-18:checked+.emotion-20 .emotion-22 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-checked="mixed"]+.emotion-20 {
  fill: #e5dbfd;
}

.emotion-15[aria-disabled='true'] .emotion-18[aria-checked="mixed"]+.emotion-20 .emotion-22 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-15 .emotion-18:checked+.emotion-20 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-15 .emotion-18:checked+.emotion-20 .emotion-22 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-15 .emotion-18[aria-invalid="true"]:checked+.emotion-20 .emotion-22 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-15 .emotion-18[aria-checked="mixed"]+.emotion-20 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-15 .emotion-18[aria-checked="mixed"]+.emotion-20 .emotion-22 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-15:hover[aria-disabled='false'] .emotion-18[aria-invalid='false'][aria-checked='false']+.emotion-20 .emotion-22 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15:hover[aria-disabled='false'] .emotion-18[aria-invalid='false'][aria-checked='true']+.emotion-20 .emotion-22 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-15:hover[aria-disabled='false'] .emotion-18[aria-invalid='false'][aria-checked='mixed']+.emotion-20 .emotion-22 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-15:hover[aria-disabled='false'] .emotion-18[aria-invalid='true'][aria-checked='false']+.emotion-20 .emotion-22 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-15:hover[aria-disabled='false'] .emotion-18[aria-invalid='true'][aria-checked='true']+.emotion-20 .emotion-22 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-15 .emotion-18[aria-invalid="true"]+.emotion-20 {
  fill: #e51963;
}

.emotion-15 .emotion-18[aria-invalid="true"]+.emotion-20 .emotion-22 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-15 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-17 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-17:not(:disabled) {
  cursor: pointer;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

.emotion-17:not(:disabled):checked+.emotion-20,
.emotion-17:not(:disabled)[aria-checked='mixed']+.emotion-20 {
  fill: #8c40ef;
}

.emotion-17:not(:disabled):checked+.emotion-20 .emotion-22,
.emotion-17:not(:disabled)[aria-checked='mixed']+.emotion-20 .emotion-22 {
  stroke: #8c40ef;
}

.emotion-17:not(:disabled)[aria-invalid='true']+.emotion-20,
.emotion-17:not(:disabled)[aria-invalid='mixed']+.emotion-20 {
  fill: #ffebf2;
}

.emotion-17:not(:disabled)[aria-invalid='true']+.emotion-20 .emotion-22,
.emotion-17:not(:disabled)[aria-invalid='mixed']+.emotion-20 .emotion-22 {
  stroke: #b3144d;
}

.emotion-17:focus+.emotion-20 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-17:focus+.emotion-20 .emotion-22 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-17[aria-invalid='true']:focus+.emotion-20 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-17[aria-invalid='true']:focus+.emotion-20 .emotion-22 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-19 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-19 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-21 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-27 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <div
              class="emotion-8 emotion-1"
            >
              <legend
                class="emotion-10 emotion-11 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                Label
              </legend>
              <span
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-14 emotion-15 emotion-16"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-17 emotion-18"
                id="«r17»"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-19 emotion-20"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-21 emotion-22"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-23 emotion-1"
              >
                <div
                  class="emotion-25 emotion-1"
                >
                  <label
                    class="emotion-27 emotion-28 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r17»"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-14 emotion-15 emotion-16"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-17 emotion-18"
                id="«r1a»"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-19 emotion-20"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-21 emotion-22"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-23 emotion-1"
              >
                <div
                  class="emotion-25 emotion-1"
                >
                  <label
                    class="emotion-27 emotion-28 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    for="«r1a»"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
